apps/base/gotify/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gotify.f9.casa`)
      kind: Rule
      services:
        - name: gotify
          port: 80
      middlewares:
        - name: default-headers
          namespace: default
